--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pyo3 = "0.22.0"
+# serde_json = "1"
 
 [dependencies.raug]
 path = "../raug"
+# features = ["serde"]
